--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/normal_video.mp4"
+        <source src="static/videos/teaser.mp4"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Open-category 3D object reconstruction from sparse-view images
+        3D object reconstruction from sparse-view images
       </h2>
     </div>
   </div>
