--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <sup>2</sup>International Digital Economy Academy (IDEA), <br>
                       <sup>3</sup>The Chinese University of Hong Kong (Shenzhen), <br>
                       <sup>3</sup>Tsinghua University
-                      <br>arXiv:xxx</span>
+                      <br>arXiv:2410.13195</span>
                     <span class="eql-cntrb">
                       <small><br><sup>*</sup>Equal Contribution</small>
                       <small><br><sup>†</sup>Corresponding Author</small>
@@ -96,7 +96,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/2404.16323" target="_blank"
+                        <a href="https://arxiv.org/pdf/2410.13195" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -107,7 +107,7 @@
 
                     <!-- Supplementary PDF link -->
                     <span class="link-block">
-                      <a href="https://arxiv.org/pdf/2404.16323" target="_blank"
+                      <a href="https://arxiv.org/pdf/2410.13195" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
@@ -129,7 +129,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2404.16323" target="_blank"
+                  <a href="https://arxiv.org/pdf/2410.13195" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -284,19 +284,17 @@
 
 
 <hr >
-<!--BibTex citation -->
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{wu2024dig3d,
-        title={DIG3D: Marrying Gaussian Splatting with Deformable Transformer for Single Image 3D Reconstruction},
-        author={Wu, Jiamin and Liu, Kenkun and Gao, Han and Jiang, Xiaoke and Zhang, Lei},
-        journal={arXiv preprint arXiv:2404.16323},
+        title={UniG: Modelling Unitary 3D Gaussians for View-consistent 3D Reconstruction},
+        author={Wu, Jiamin and Liu, Kenkun and Shi, Yukai and Jiang, Xiaoke and Yao, Yuan and Zhang, Lei},
+        journal={arXiv preprint arXiv:2410.13195},
         year={2024}
       }</code></pre>
     </div>
 </section>
-<!--End BibTex citation -->
 
 
   <footer class="footer">
