--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{wu2024dig3d,
+      <pre><code>@article{wu2024unig,
         title={UniG: Modelling Unitary 3D Gaussians for View-consistent 3D Reconstruction},
         author={Wu, Jiamin and Liu, Kenkun and Shi, Yukai and Jiang, Xiaoke and Yao, Yuan and Zhang, Lei},
         journal={arXiv preprint arXiv:2410.13195},
